# spl_assignment_3_client

./: CMakeLists.txt  makefile
include/: ConnectionHandler.h  Task.h
src/: ConnectionHandler.cpp  Task.cpp  main.cpp
